styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap");

:root {
  --font-family-text: "jost", sans-serif;
  --font-family-title: "Libre Baskerville", serif;
  --font-family-title-light: "STIX Two Text", serif;
  --color-black: #000000;
  --color-light-black: #3d3d3d;
  --color-yellow: #eac082;
  --color-light-background: #f1eee3;
  --color-grey-background: #f3f4f3;
  --color-blue: #82b8ea;

  --default-spacing: 60px;
  --menu-height: 100px;

  --z-index-modal: 7;
  --z-index-top: 6;
  --z-index-nav: 5;
  --z-index-image-absolute: 4;
  --z-index-nav-background: 3;
  --z-index-slider: 2;
  --z-index-default: 1;
  --z-index-null: 0;
}

* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  font-family: var(--font-family-text);
  font-weight: 200;
  font-size: 13px;
}

html,
body {
  background: var(--color-grey-background);
}

h1 {
  font-family: var(--font-family-title);
  font-size: 40px;
  color: var(--color-light-black);
  text-transform: uppercase;
  margin: var(--default-spacing) 0;

  @media screen and (max-width: 1025px) {
    font-size: 25px;
    text-align: center;
  }
}

h2,
.title {
  font-family: var(--font-family-title);
  font-size: 2rem;
  color: var(--color-light-black);
}

a {
  color: var(--color-yellow);
}

.link {
  cursor: pointer;

  &:not(.title) {
    color: var(--color-black);
  }
  &:hover,
  &:active {
    color: var(--color-yellow);

    > * {
      color: var(--color-yellow);

      &:not(.close-icon) {
        fill: var(--color-yellow);
      }
    }
  }
}

svg {
  vertical-align: sub;
}

.flex {
  display: flex;
}

strong,
font-semibold {
  font-weight: 350;
}

.desktop {
  @media screen and (max-width: 1025px) {
    display: none;
  }
}

.mobile {
  @media screen and (min-width: 1025px) {
    display: none;
  }
}

.desktop-gallery {
  @media screen and (max-width: 800px) {
    display: none;
  }
}

.mobile-gallery {
  @media screen and (min-width: 800px) {
    display: none;
  }
}

.grid {
  z-index: 1000;
}

.bounded {
  @media screen and (max-width: 1025px) {
    padding: var(--default-spacing) 10%;
  }

  @media screen and (min-width: 1025px) {
    padding: var(--menu-height) 10%;

    &.large {
      padding: var(--menu-height) 20%;
    }
  }
}

.burger-menu {
  @media screen and (min-width: 1025px) {
    display: none;
  }

  width: 100%;
  position: fixed;
  top: 0;
  z-index: var(--z-index-top);

  .menu {
    padding: 2rem 1.5rem;
    display: flex;
    justify-content: space-between;

    &.no-logo {
      justify-content: flex-end;
    }

    .logo {
      height: 1rem;
    }
  }
}

.mobile,
.mobile-gallery {
  &.header {
    padding-top: 100px;
    overflow: hidden;

    &:not(h1) {
      width: 100vw;
    }

    img {
      min-width: 100%;
      max-height: 50vh;
      object-fit: cover;
      object-position: bottom;
    }
  }
}

.pointer {
  cursor: pointer;
}

